--- a/minimal/minimal-calculator-basic.html
+++ b/minimal/minimal-calculator-basic.html
@@ -63,7 +63,7 @@ body {
 }
 
 .calculator .accent{
-   background: #f3fff3;  background: #f3fff3;;
+   background: #a9a9a9;  background: #a9a9a9;;
 }
 
 .calculator .space {
@@ -82,7 +82,7 @@ body {
 
 .calculator button:hover,
 #backspace:hover {
-  background: #f3fff3;
+  background: #a9a9a9;
   color:#000000;
   transform: scale(0.9);
   border-radius: 20%;
@@ -239,7 +239,7 @@ var buttons = document.getElementsByClassName("button");
   button.addEventListener("click", function() {
     if (button.textContent != "=" && 
     button.textContent != "AC" && 
-    button.textContent != "*" && 
+    button.textContent != "×" && 
     button.textContent != "/" && 
     button.textContent != "√" && 
     button.textContent != "+" && 
